WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54228
Fix style in KURLGooglePrivate
https://bugs.webkit.org/show_bug.cgi?id=54228
Summary
Fix style in KURLGooglePrivate
Cosmin Truta
Reported
2011-02-10 11:34:09 PST
check-webkit-style currently fails on KURLGooglePrivate.h and KURLGoogle.cpp. 'nuff said.
Attachments
Patch
(8.94 KB, patch)
2011-02-10 13:45 PST
,
Cosmin Truta
no flags
Details
Formatted Diff
Diff
Patch
(8.94 KB, patch)
2011-02-10 13:51 PST
,
Cosmin Truta
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Cosmin Truta
Comment 1
2011-02-10 13:45:17 PST
Created
attachment 82040
[details]
Patch I replaced "NULL" with "0", "'\0'" or "null" as appropriate. I kept using the (dictionary word) "null" because it makes sense to refer to the "null string", and also because it has semantic meaning in the underlying classes (e.g. CString::isNull).
Cosmin Truta
Comment 2
2011-02-10 13:51:38 PST
Created
attachment 82043
[details]
Patch Same patch as before, with a typo fixed.
WebKit Commit Bot
Comment 3
2011-02-10 17:01:43 PST
Comment on
attachment 82043
[details]
Patch Clearing flags on attachment: 82043 Committed
r78289
: <
http://trac.webkit.org/changeset/78289
>
WebKit Commit Bot
Comment 4
2011-02-10 17:01:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug