2011-02-10  Cosmin Truta  <ctruta@chromium.org>

Reviewed by David Levin.

        Fix style in KURLGooglePrivate
        https://bugs.webkit.org/show_bug.cgi?id=54228

        Replace occurrences of NULL with 0, '\0' or null (as applicable),
        to appease check-webkit-style.

        No new tests. This is a style fix.

        * platform/KURLGoogle.cpp:
        * platform/KURLGooglePrivate.h:

Canonical link: https://commits.webkit.org/68300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78289 268f45cc-cd09-0410-ab3c-d52691b4dbfc